Correct privacymsg z-index to avoid hover dropdown on scroll

--- a/client/src/app/+videos/+video-watch/shared/information/privacy-concerns.component.scss
+++ b/client/src/app/+videos/+video-watch/shared/information/privacy-concerns.component.scss
@@ -25,6 +25,13 @@
   }
 }
 
+// Avoid higher z-index when overlay on touchscreens
+:host-context(.menu-open) {
+  .privacy-concerns {
+    z-index: z(overlay) - 1;
+  }
+}
+
 // Or if we are in the small view
 @media screen and (max-width: $small-view) {
   .privacy-concerns {
